test/libsolidity/syntaxTests/storageLayoutSpecifier/state_variable_layout_specifier.sol
contract C {
    uint x layout at 0xF;
}
// ----
// ParserError 2314: (24-30): Expected ';' but got identifier
